--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center|center_horizontal|center_vertical"
-    tools:context="com.bugull.cameratakedemo.com.bugull.uploadPic.MainActivity">
+    tools:context="ludi.bupt.edu.facerecdocker.MainActivity">
+
+    <EditText
+        android:id="@+id/host"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:hint="host"
+        android:textAllCaps="false"
+        android:textSize="18dp"/>
+
+    <EditText
+        android:id="@+id/port"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:hint="port"
+        android:textAllCaps="false"
+        android:textSize="18dp"/>
 
     <Button
         android:id="@+id/take_btn"
@@ -41,100 +56,16 @@
         android:textColor="@color/colorPrimaryDark"
         android:gravity="center"/>
 
-    <Button
-        android:id="@+id/glspUpload"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:text="MCC"
-        android:textAllCaps="false"
-        android:textSize="18dp"/>
-
-    <TextView
-        android:id="@+id/textViewglsp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textColor="@color/colorPrimaryDark"
-        android:gravity="center"/>
-
-    <!--<Button-->
-        <!--android:id="@+id/upload"-->
-        <!--android:layout_width="300dp"-->
-        <!--android:layout_height="40dp"-->
-        <!--android:text="MECmyScheme upload（8803）"-->
-        <!--android:textAllCaps="false" />-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/textView"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text=""-->
-        <!--android:textColor="@color/colorPrimaryDark"-->
-        <!--android:gravity="center"/>-->
-
-    <!--<Button-->
-        <!--android:id="@+id/uploadcloud"-->
-        <!--android:layout_width="300dp"-->
-        <!--android:layout_height="40dp"-->
-        <!--android:text="MCCsimpleUpload(8802)"-->
-        <!--android:textAllCaps="false" />-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/textViewcloud"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text=""-->
-        <!--android:textColor="@color/colorPrimaryDark"-->
-        <!--android:gravity="center"/>-->
-
-    <!--<Button-->
-        <!--android:id="@+id/uploadcloudP"-->
-        <!--android:layout_width="300dp"-->
-        <!--android:layout_height="40dp"-->
-        <!--android:text="MCCglspUpload(8801)"-->
-        <!--android:textAllCaps="false" />-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/textViewcloudP"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text=""-->
-        <!--android:textColor="@color/colorPrimaryDark"-->
-        <!--android:gravity="center"/>-->
-
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
-    <ImageView
-        android:id="@+id/iv"
-        android:layout_width="230dp"
-        android:layout_height="230dp" />
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <EditText
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:hint="name"
-            android:id="@+id/name"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/signup"
-            android:text="signup"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textresult"/>
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/iv"
+            android:layout_width="230dp"
+            android:layout_height="230dp" />
 
     </LinearLayout>
-
-
-</LinearLayout>
-
 
 </LinearLayout>
